--- a/index.html
+++ b/index.html
@@ -40,6 +40,6 @@
      </div>
  </div>
  
- <script src="js/core.js" type="text/javascript"></script>
+ <script src="core.js" type="text/javascript"></script>
  </body>
  </html>
