--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
  <head>
      <meta charset="UTF-8">
      <title>Title</title>
-     <link href="css/styles.css" type="text/css" rel="stylesheet"></link>
+     <link href="styles.css" type="text/css" rel="stylesheet"></link>
  </head>
  <body>
  <div>
